IMPROVEMENT - ADD - make section group, title and desc optional BUG - FIX - CSS word break IMPROVEMENT - CHANGE - Settings-Checkbox: Make description visible outside of title-attribute

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -103,7 +103,7 @@ section.sv_admin_section {
     padding: 0;
     min-height: 500px;
     width: 100%;
-    word-break: break-all;
+    word-break: break-word;
     background-color: #FFF;
 }
 section.sv_admin_section#section_about {
